[Clean] フォーマット / クリーンアップ

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,7 +8,7 @@ commands:
   mystatus:
     aliases: ["ms", "status", "st"]
     permission: mystatus.command.mystatus
-    permission-message: "§c権限がありません。運営に報告してください。"
+    permission-message: 権限がありません。運営に報告してください。
 permissions:
   mystatus.command.mystatus:
     default: true
