[Add] /kdstatusコマンドを追加

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,7 +7,12 @@ website: ${project.url}
 commands:
   mystatus:
     aliases: ["ms", "status", "st"]
-    permission: mystatus.command.mystatus
+    permission: kdstatusreloaded.command.mystatus
+  kdstatus:
+    alias: ["kds"]
+    permission: kdstatusreloaded.command.kdstatus
 permissions:
   mystatus.command.mystatus:
     default: true
+  kdstatusreloaded.command.kdstatus:
+    default: op
