--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,10 @@
       <id>spigot-repo</id>
       <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
     </repository>
+    <repository>
+      <id>rayzr-repo</id>
+      <url>https://cdn.jsdelivr.net/gh/Rayzr522/maven-repo@master/</url>
+    </repository>
   </repositories>
 
   <dependencies>
@@ -55,7 +59,12 @@
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
-      <version>1.18.8</version>
+      <version>1.18.10</version>
+    </dependency>
+    <dependency>
+      <groupId>me.rayzr522</groupId>
+      <artifactId>jsonmessage</artifactId>
+      <version>1.2.0</version>
     </dependency>
   </dependencies>
 </project>
