--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
     </repository>
     <repository>
       <id>rayzr-repo</id>
-      <url>https://cdn.jsdelivr.net/gh/Rayzr522/maven-repo@master/</url>
+      <url>https://raw.githubusercontent.com/Rayzr522/maven-repo/master/</url>
     </repository>
   </repositories>
 
