--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: ${project.name}
 main: jp.azisaba.lgw.kdstatus.KDStatusReloaded
 version: ${project.version}
-author: siloneco
+author: [siloneco , matsu1213]
 description: "KDStatus reloaded."
 website: ${project.url}
 commands:
