--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -1,6 +1,6 @@
 ---
 name: Build Test
-"on": [push]
+"on": [push, workflow_dispatch]
 
 jobs:
   build-test:
@@ -16,3 +16,8 @@ jobs:
       - run: java -version
       - run: mvn --version
       - run: mvn -B package
+
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v3.1.0
+        with:
+          path: /home/runner/work/KDStatusReloaded/KDStatusReloaded/target/
