--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,6 +4,7 @@ version: ${project.version}
 authors: [siloneco, matsu1213, sysnote8main]
 description: "KDStatus reloaded."
 website: ${project.url}
+api-version: 1.16
 commands:
   mystatus:
     aliases: ["ms", "status", "st"]
