--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,9 @@
             <version>3.5.1</version>
           </dependency>
         </dependencies>
+        <configuration>
+          <groups>small</groups>
+        </configuration>
       </plugin>
     </plugins>
   </build>
