--- a/pom.xml
+++ b/pom.xml
@@ -149,5 +149,11 @@
       <version>5.11.3</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.jetbrains</groupId>
+      <artifactId>annotations</artifactId>
+      <version>26.0.1</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 </project>
