--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,18 +25,14 @@ jobs:
         with:
           distribution: "adopt"
           java-version: "17"
-          cache: "maven"
 
-      - name: Java version
-        run: java -version
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
 
-      - name: Check maven version
-        run: mvn --version
-
-      - name: Build
-        run: mvn -B package
+      - name: Build with Gradle
+        run: ./gradlew build
 
       - name: Upload a Build Artifact
         uses: actions/upload-artifact@v4.4.3
         with:
-          path: target/
+          path: build/libs/
