--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 # Plugins
 lombok = "8.11"
+paperweight = "2.0.0-beta.11"
 
 # Project tools
 junit-jupiter = "5.11.3"
@@ -10,12 +11,13 @@ jetbrains-annotations = "26.0.1"
 hikaricp = "4.0.3"
 com-mysql-mysql-connector-j = "9.1.0"
 
-# Plugin dependencies
-spigot-api = "1.16.5-R0.1-SNAPSHOT"
+# Minecraft plugin dependencies
+paper-api = "1.16.5-R0.1-SNAPSHOT"
 jsonmessage = "1.3.1"
 
 [plugins]
 lombok = { id = "io.freefair.lombok", version.ref = "lombok" }
+paperweight = { id = "io.papermc.paperweight.userdev", version.ref = "paperweight" }
 
 [libraries]
 com-mysql-mysql-connector-j = { module = "com.mysql:mysql-connector-j", version.ref = "com-mysql-mysql-connector-j" }
@@ -23,4 +25,4 @@ com-zaxxer-hikaricp = { module = "com.zaxxer:HikariCP", version.ref = "hikaricp"
 me-rayzr522-jsonmessage = { module = "me.rayzr522:jsonmessage", version.ref = "jsonmessage" }
 org-jetbrains-annotations = { module = "org.jetbrains:annotations", version.ref = "jetbrains-annotations" }
 org-junit-jupiter-junit-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "junit-jupiter" }
-org-spigotmc-spigot-api = { module = "org.spigotmc:spigot-api", version.ref = "spigot-api" }
+paper-api = { module = "com.destroystokyo.paper:paper-api", version.ref = "paper-api"}
