--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,33 +1,93 @@
 name: Release
 
 on:
-  push:
-    tags:
-      - "*"
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Plugin version. ex: x.x.x, x.x.x-SNAPSHOT'
+        required: true
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
-  build-and-release:
+  build-test:
+    name: Build test for release
     runs-on: ubuntu-latest
+    timeout-minutes: 3
+    steps:
+      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+      - uses: actions/setup-java@dded0888837ed1f317902acf8a20df0ad188d165 # v5.0.0
+        with:
+          distribution: "adopt"
+          java-version: 8
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@017a9effdb900e5b5b2fddfb590a105619dca3c3 # v4.4.2
+
+      - name: Build
+        run: ./gradlew build
+        env:
+          VERSION: ${{ github.event.inputs.version }}
+
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@b4b15b8c7c6ac21ea08fcf65892d2ee8f75cf882 # v4.4.3
+        with:
+          path: build/libs/
+
+  release:
+    name: Create github release
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
+    needs:
+      - build-test
+
     permissions:
       contents: write
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v5
-      - name: Setup Java 8
-        uses: actions/setup-java@v5.0.0
+      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+      - uses: actions/setup-java@dded0888837ed1f317902acf8a20df0ad188d165 # v5.0.0
         with:
-          distribution: "corretto"
-          java-version: "8"
-          cache: "maven"
-      - name: Check java version
-        run: java -version
-      - name: Check maven version
-        run: mvn --version
-      - name: Build
-        run: mvn -B package
+          distribution: "adopt"
+          java-version: 8
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@017a9effdb900e5b5b2fddfb590a105619dca3c3 # v4.4.2
+
+      - name: Build for release
+        run: ./gradlew build
+        env:
+          VERSION: ${{ github.event.inputs.version }}
+
       - name: Create release
-        uses: softprops/action-gh-release@v2.3.2
+        uses: softprops/action-gh-release@72f2c25fcb47643c292f7107632f7a47c1df5cd8 # v2.3.2
         with:
           draft: true
-          files: target/*.jar
+          files: build/libs/*.jar
           generate_release_notes: true
+
+  publish:
+    name: Publish to azisaba repo
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
+    needs:
+      - build-test
+
+    steps:
+      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+      - uses: actions/setup-java@dded0888837ed1f317902acf8a20df0ad188d165 # v5.0.0
+        with:
+          distribution: "adopt"
+          java-version: 8
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@017a9effdb900e5b5b2fddfb590a105619dca3c3 # v4.4.2
+
+      - name: Publish to azisaba repo
+        run: ./gradlew publish
+        env:
+          VERSION: ${{ github.event.inputs.version }}
+          REPO_USERNAME: ${{ secrets.REPO_USERNAME }}
+          REPO_PASSWORD: ${{ secrets.REPO_PASSWORD }}
