--- a/.gitignore
+++ b/.gitignore
@@ -1,89 +1,59 @@
+# Created by https://www.toptal.com/developers/gitignore/api/intellij,gradle
+# Edit at https://www.toptal.com/developers/gitignore?templates=intellij,gradle
 
-# Created by https://www.gitignore.io/api/maven,eclipse
-# Edit at https://www.gitignore.io/?templates=maven,eclipse
+### Intellij ###
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
+# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
-### Eclipse ###
-.metadata
-bin/
-tmp/
-*.tmp
-*.bak
-*.swp
-*~.nib
-local.properties
-.settings/
-.loadpath
-.recommenders
+# User-specific stuff
+.idea/
 
-# External tool builders
-.externalToolBuilders/
+# CMake
+cmake-build-*/
 
-# Locally stored "Eclipse launch configurations"
-*.launch
+# File-based project format
+*.iws
 
-# PyDev specific (Python IDE for Eclipse)
-*.pydevproject
+# IntelliJ
+out/
 
-# CDT-specific (C/C++ Development Tooling)
-.cproject
+# mpeltonen/sbt-idea plugin
+.idea_modules/
 
-# CDT- autotools
-.autotools
+# JIRA plugin
+atlassian-ide-plugin.xml
 
-# Java annotation processor (APT)
-.factorypath
+# Crashlytics plugin (for Android Studio and IntelliJ)
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
 
-# PDT-specific (PHP Development Tools)
-.buildpath
+### Gradle ###
+.gradle
+**/build/
+!src/**/build/
 
-# sbteclipse plugin
-.target
+# Ignore Gradle GUI config
+gradle-app.setting
 
-# Tern plugin
-.tern-project
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
 
-# TeXlipse plugin
-.texlipse
+# Avoid ignore Gradle wrappper properties
+!gradle-wrapper.properties
 
-# STS (Spring Tool Suite)
-.springBeans
+# Cache of project
+.gradletasknamecache
 
-# Code Recommenders
-.recommenders/
-
-# Annotation Processing
-.apt_generated/
-
-# Scala IDE specific (Scala & Java development for Eclipse)
-.cache-main
-.scala_dependencies
-.worksheet
-
-### Eclipse Patch ###
+# Eclipse Gradle plugin generated files
 # Eclipse Core
 .project
-
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
 
-# Annotation Processing
-.apt_generated
+### Gradle Patch ###
+# Java heap dump
+*.hprof
 
-.sts4-cache/
-
-### Maven ###
-target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
-.mvn/timing.properties
-.mvn/wrapper/maven-wrapper.jar
-
-# End of https://www.gitignore.io/api/maven,eclipse
-
-.idea/
-*.iml
+# End of https://www.toptal.com/developers/gitignore/api/intellij,gradle
