--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,14 +1,14 @@
 [versions]
 # plugin
-shadow = "8.3.9"
-runPaper = "2.3.1" # Latest version for java 8
+shadow = "9.1.0"
+runPaper = "3.0.0"
 
 # library
 spigotApi = "1.16.5-R0.1-SNAPSHOT"
 configLib = "4.6.1"
-mysqlConnectorJ = "9.1.0"
-hikaricp = "4.0.3"
-jdbi = "3.39.1"
+mysqlConnectorJ = "9.4.0"
+hikaricp = "7.0.2"
+jdbi = "3.49.5"
 flyway = "9.13.0"
 jspecify = "1.0.0"
 junit = "5.11.4"
