--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -34,7 +34,7 @@ flywayMysql = { module = "org.flywaydb:flyway-mysql", version.ref = "flyway" }
 
 # check
 jspecify = { module = "org.jspecify:jspecify", version.ref = "jspecify" }
-junitBom = { module = "org.junit.jupiter:junit-bom", version.ref = "junit" }
+junitBom = { module = "org.junit:junit-bom", version.ref = "junit" }
 junitJupiter = { module = "org.junit.jupiter:junit-jupiter" }
 junitPlatformLauncher = { module = "org.junit.platform:junit-platform-launcher" }
 
