--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,10 +6,10 @@ runPaper = "3.0.0"
 # library
 spigotApi = "1.16.5-R0.1-SNAPSHOT"
 configLib = "4.6.1"
-mysqlConnectorJ = "9.4.0"
+mariaDBConnectorJ = "3.5.5"
 hikaricp = "7.0.2"
 jdbi = "3.49.5"
-flyway = "9.13.0"
+flyway = "11.12.0"
 jspecify = "1.0.0"
 junit = "5.13.4"
 
@@ -25,7 +25,7 @@ spigotApi = { module = "org.spigotmc:spigot-api", version.ref = "spigotApi" }
 configLib = { module = "de.exlll:configlib-yaml", version.ref = "configLib" }
 
 # database
-mysqlConnectorJ = { module = "com.mysql:mysql-connector-j", version.ref = "mysqlConnectorJ" }
+mariaDBConnectorJ = { module = "org.mariadb.jdbc:mariadb-java-client", version.ref = "mariaDBConnectorJ"}
 hikaricp = { module = "com.zaxxer:HikariCP", version.ref = "hikaricp" }
 jdbiCore = { module = "org.jdbi:jdbi3-core", version.ref = "jdbi" }
 jdbiSqlobject = { module = "org.jdbi:jdbi3-sqlobject", version.ref = "jdbi" }
